# lol-at-home

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: SetTargetDefaults.cmake
src/: CMakeLists.txt  Main.cc
src/client/: CMakeLists.txt  DummyClient.cc
src/client/cli_client/: CMakeLists.txt  CliClient.cc
src/client/engine/: CMakeLists.txt  Camera.cc  Camera.h  Entity.h  Game.cc  Game.h  GameConfig.h  GameObject.h  IEcsSystem.h  IWorldRenderable.h  Input.cc  Input.h  InputAccessor.cc  InputAccessor.h  Property.h  Renderer.cc  Renderer.h  Scene.cc  Scene.h  SceneInfo.h  TextRenderer.h  Vector2.h
src/client/engine/primitives/: Color.h  Transform.h  Vector2.h
src/client/engine/renderables/: CircleRenderable.h  IWorldRenderable.h
src/client/engine/systems/: IEcsSystem.h
src/client/game/: CMakeLists.txt  ClientComponents.h  Components.h  GameClient.cc  GameplayScene.cc  GameplayScene.h  InboundEvent.h  InputSystem.h  Main.cc  MyAwesomeGameObject.h  MyAwesomeSystem.h  NetworkClient.cc  NetworkClient.h  OutboundEvent.h  RenderSystem.h  ThreadSafeQueue.h
src/client/game/systems/: InboundEventVisitor.cc  InboundEventVisitor.h  InputCameraSystem.h  InputMovementSystem.h  InputSystem.h  NetworkSyncSystem.h  RenderChampionSystem.h  RenderMapSystem.h  RenderSystem.h
src/lol_at_home_client/: DummyClient.cc
src/lol_at_home_server/: AbilityImpl.h  AbilitySlot.h  AbilityTarget.h  CMakeLists.txt  Config.h  EcsComponents.h  Entity.cc  Entity.h  EntityStats.h  EntityUpdate.h  GameAction.h  GameActionProcessor.h  GameActionVisitor.h  GameInput.h  GameState.cc  GameState.h  GameStateDelta.h  GameStateThread.cc  GameStateThread.h  GameStateThreadConfig.h  Main.cc  PlayerInput.h  Vector2.h
src/lol_at_home_server/abilities/: AbilityId.h  AbilityImpl.h  AbilityTarget.h
src/lol_at_home_server/actions/: GameAction.h  GameActionProcessor.h
src/lol_at_home_server/core/: GameState.cc  GameState.h  GameStateThread.cc  GameStateThread.h  GameStateThreadConfig.h
src/lol_at_home_server/ecs/: EcsComponents.h
src/lol_at_home_server/networking/: EnetNetworkManager.cc  EnetNetworkManager.h  SerializedGameState.h
src/lol_at_home_shared/: CMakeLists.txt  EcsComponents.h  GameStateSerializer.h  game_state.fbs
src/lol_at_home_shared/abilities/: AbilityTag.h  AbilityTarget.h
src/server/: CMakeLists.txt  Main.cc
src/server/abilities/: AbilityImpl.h
src/server/actions/: GameAction.h  GameActionProcessor.h
src/server/champions/: ChampionFactory.h
src/server/core/: EnetInterface.cc  EnetInterface.h  EnetNetworkManager.cc  EnetNetworkManager.h  GameState.cc  GameState.h  GameStateDelta.h  GameStateThread.cc  GameStateThread.h  GameStateThreadConfig.h  InboundEvent.h  InboundEventVisitor.cc  InboundEventVisitor.h  InboundPacket.h  InboundVisitor.cc  InboundVisitor.h  OutboundEvent.h  OutboundEventVisitor.cc  OutboundEventVisitor.h  OutboundPacket.h  Server.cc  Server.h
src/server/ecs/: AutoAttackSystem.h  EcsComponents.h  HealthSystem.h  IEcsSystem.h  MovementSystem.h
src/server/ecs_systems/: HealthSystem.h  IEcsSystem.h  MovementSystem.h
src/server/networking/: EnetNetworkManager.cc  EnetNetworkManager.h
src/server/util/: IPeriodic.h  PeriodicDriver.h  ThreadSafeQueue.h  ThreadSafeRegistry.h
src/shared/: CMakeLists.txt  EcsComponents.h  GameAction.h  GameActionSerializer.cc  GameActionSerializer.h  GameStateSerializer.cc  GameStateSerializer.h  NetworkChannels.h  PlayerAssignment.h  PlayerAssignmentSerializer.cc  PlayerAssignmentSerializer.h  game_actions.fbs  game_state.fbs
src/shared/abilities/: AbilitySlot.h  AbilityTag.h  AbilityTarget.h
src/shared/domain/: ArenaConfig.h  ChampionId.h  EcsComponents.h  GameAction.h  PlayerAssignment.h
src/shared/fbs/: c2s_message.fbs  common_types.fbs  game_actions.fbs  game_common.fbs  game_state.fbs  s2c_message.fbs
src/shared/serialization/: C2SMessageSerializer.cc  C2SMessageSerializer.h  GameActionSerializer.cc  GameActionSerializer.h  GameStateSerializer.cc  GameStateSerializer.h  PlayerAssignmentSerializer.cc  PlayerAssignmentSerializer.h  S2CMessageSerializer.cc  S2CMessageSerializer.h
tests/: CMakeLists.txt
tests/server/: CMakeLists.txt  GameStateTest.cc
tests/shared/: CMakeLists.txt  GameStateSerializerTest.cc
